.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Individual_Leave_Record__c.object
<CustomObject>
    <description>Sets up record for each day on which employee is absent</description>
    <fields>
        <fullName>xcdhcm__AM_PM_Allday__c</fullName>
        <label>AM/PM/Allday</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>All day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Company__c</fullName>
        <formula>xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Companies__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Current_month__c</fullName>
        <formula>month(  xcdhcm__Date__c  ) = month(today())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Day__c</fullName>
        <formula>CASE(MOD( xcdhcm__Date__c  - DATE(1900, 1, 6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2,&quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6,&quot;Friday&quot;,&quot;&quot;)</formula>
        <label>Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <formula>xcdhcm__Leave_Request__r.xcdhcm__Employee_Details__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_leaving_date__c</fullName>
        <formula>xcdhcm__Leave_Request__r.xcdhcm__Employee_leaving_date__c</formula>
        <label>Employee leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leave_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leave request</label>
        <referenceTo>xcdhcm__Leave_Request__c</referenceTo>
        <relationshipName>Individual_Leave_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leave_category__c</fullName>
        <formula>CASE(xcdhcm__Leave_Request__r.xcdhcm__Leave_Category__c,
&quot;Annual Leave&quot;, &quot;Annual Leave&quot;,
&quot;TOIL&quot;, &quot;TOIL&quot;,
&quot;Sabbatical&quot;, &quot;Sabbatical&quot;,
&quot;Study Leave&quot;, &quot;Study Leave&quot;,
&quot;Other paid leave&quot;, &quot;Other paid leave&quot;,
&quot;Unpaid Leave&quot;,&quot;Unpaid Leave&quot;,
&quot;Sick Leave&quot;,&quot;Sick Leave&quot;,
&quot;Compassionate&quot;,&quot;Compassionate&quot;,
&quot;Emergency Leave for Dependants&quot;,&quot;Emergency Leave for Dependants&quot;,
&quot;Maternity &amp; Paternity&quot;,&quot;Maternity &amp; Paternity&quot;,
&quot;Working from home&quot;,&quot;Working from home&quot;,
&quot;Business Travel&quot;,&quot;Business Travel&quot;,
&quot;Conference / Seminar&quot;,&quot;Conference / Seminar&quot;,
&quot;Jury Service&quot;,&quot;Jury Service&quot;,
&quot;Working Weekends&quot;,&quot;Working Weekends&quot;,
&quot;Sick leave - paid&quot;,&quot;Sick leave - paid&quot;,
&quot;Sick leave - unpaid&quot;,&quot;Sick leave - unpaid&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leave category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_before_data_retention_period__c</fullName>
        <formula>If(
  not(isblank( xcdhcm__Leave_Request__r.xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c )), 
  xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Leave_Request__r.xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c, 
  xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Leave_Request__r.xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__HMRC_data_retention_threshold__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leaver before data retention period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Number_of_days__c</fullName>
        <formula>If( 
or(ispickval(xcdhcm__AM_PM_Allday__c,  &quot;AM&quot;),ispickval(xcdhcm__AM_PM_Allday__c,  &quot;PM&quot;)), 0.5,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Number_of_hours__c</fullName>
        <formula>if( xcdhcm__Number_of_days__c =1, 
if(
or( xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Hours_AM_hh_mm__c &lt;&gt; null,
 xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Hours_PM_hh_mm__c &lt;&gt; null),
 (VALUE(left(xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Hours_AM_hh_mm__c,2)) + VALUE(left( xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Hours_PM_hh_mm__c,2)) +
  ((1/60) * (value(right(xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Hours_AM_hh_mm__c,2)) + VALUE(right( xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Hours_PM_hh_mm__c,2))))),
 xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Contractual_Hours__c /
 xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Working_Days_Week__c ),

if( and(xcdhcm__Number_of_days__c =0.5, ispickval( xcdhcm__AM_PM_Allday__c ,&quot;AM&quot;)),
if(xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Hours_AM_hh_mm__c &lt;&gt; null,  (VALUE(left(xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Hours_AM_hh_mm__c,2))  +  ((1/60) * (value(right(xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Hours_AM_hh_mm__c,2)) ))),
0.5 * xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Contractual_Hours__c /
 xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Working_Days_Week__c ),

if( and(xcdhcm__Number_of_days__c =0.5, ispickval( xcdhcm__AM_PM_Allday__c ,&quot;PM&quot;)),
if(xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Hours_PM_hh_mm__c &lt;&gt; null,  (VALUE(left(xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Hours_PM_hh_mm__c,2))  +  ((1/60) * (value(right(xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Hours_PM_hh_mm__c,2)) ))),
0.5 * xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Contractual_Hours__c /
 xcdhcm__Leave_Request__r.xcdhcm__Leave_Summary__r.xcdhcm__Job_Role__r.xcdhcm__Working_Days_Week__c ),
0
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Test_employee__c</fullName>
        <formula>xcdhcm__Leave_Request__r.xcdhcm__Employee_Details__r.xcdhcm__Test_employee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Type_of_leave__c</fullName>
        <formula>CASE(xcdhcm__Leave_Request__r.xcdhcm__Type_of_Leave__c ,
&quot;Annual Leave&quot;,&quot;Annual Leave&quot;,
&quot;Paid Leave&quot;,&quot;Paid Leave&quot;,
&quot;Unpaid Leave&quot;,&quot;Unpaid Leave&quot;,
&quot;Sick Leave&quot;,&quot;Sick Leave&quot;,
&quot;Work&quot;,&quot;Work&quot;,
&quot;&quot;
)</formula>
        <label>Type of leave</label>
        <type>Text</type>
    </fields>
    <label>Leave Record</label>
    <nameField>
        <displayFormat>ILR-{0000}</displayFormat>
        <label>Leave record id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>